--- a/package.json
+++ b/package.json
@@ -6,21 +6,32 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typeorm": "typeorm-ts-node-commonjs -d src/data-source.ts",
+    "migration:generate": "dotenv -e .env.local npm run typeorm -- migration:generate",
+    "migration:run": "dotenv -e .env.local npm run typeorm -- migration:run",
+    "migration:revert": "dotenv -e .env.local npm run typeorm -- migration:revert",
+    "migration:show": "dotenv -e .env.local npm run typeorm -- migration:show"
   },
   "dependencies": {
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "pg": "^8.16.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
