--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "migration:show": "dotenv -e .env.local npm run typeorm -- migration:show"
   },
   "dependencies": {
+    "@types/next-auth": "^3.15.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "pg": "^8.16.0",
